[metadata]
name = TopsisPackage_102216017
version = 1.0.0
author = Sumita
author_email = ssumita_be22@thapar.edu
description = A Python implementation of the TOPSIS decision-making method.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sumita15/topsis
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    topsis = topsis.TopsisPackage_102216017:run_topsis
